--- a/source/stylesheets/_footer.scss
+++ b/source/stylesheets/_footer.scss
@@ -12,9 +12,17 @@
     a {
       text-decoration: none;
       color: $accent;
-      float: right;
       font-size: 20px;
       font-weight: 500;
+    }
+  }
+
+  @include phone {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+
+    p, a {
+      text-align: center;
     }
   }
 
