--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -156,7 +156,7 @@ body {
 }
 
 .bold {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
   letter-spacing: 1px;
   color: $blue;
@@ -194,11 +194,12 @@ input[type=email] {
   box-sizing: border-box;
   outline: none;
   transition: box-shadow .5s;
-  background-image: url('/images/spp_orange_small.png');
-  background-position: 7px 7px;
-  background-repeat: no-repeat;
-  padding-left: 50px;
+  padding-left: 20px;
   font-weight: 300;
+
+  @include phone {
+    width: 90%;
+  }
 
   &:focus {
     box-shadow: 0px 0px 5px $secondary;
