--- a/source/_nav.html.haml
+++ b/source/_nav.html.haml
@@ -1,7 +1,11 @@
 .nav
+  #nav-button
+    %i.fa.fa-bars
   %ul
     %li= link_to "Home", "#"
     %li= link_to "Book", "#"
     %li= link_to "Resources", "#"
     %li= link_to "Blog", "#"
     %li= link_to "Contact", "#"
+
+
