--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -44,10 +44,11 @@ body {
 
 .container {
   background-color: $white;
-  margin: 4em auto;
+  margin: 3em auto;
 
   @include phone {
-    margin-top: 1em;
+    margin-top:0;
+    margin-bottom: 0;
   }
 
   @include desktop {
@@ -91,6 +92,7 @@ body {
       margin: 50px 0;
       color: $white;
       font-weight: 300;
+
       i { 
         color: $primary; 
         font-size: 24px;
