--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -104,13 +104,13 @@ body {
 
 .bio-container {
   background: $secondary;
-  padding: 70px 0;
+  padding: 70px 10px;
   .bio {
     width: 85%;
     margin: 0 auto;
 
     @include phone {
-      width: 95%;
+      width: 100%;
     }
 
     .about-card {
@@ -119,7 +119,7 @@ body {
       .about {
         font-weight: 300;
         line-height: 26px;
-        padding: 30px;
+        padding: 50px 30px;
 
         h1 {
           margin: 0;
