--- a/source/stylesheets/_nav.scss
+++ b/source/stylesheets/_nav.scss
@@ -8,7 +8,8 @@
     width: 100%;
     z-index: 9999;
     box-shadow: 1px -1px 15px #555;
-    background: rgba(40,40,40,0.9)
+    background: rgba(40,40,40,0.9);
+    border-radius: 0px;
   }
 
   ul {
@@ -35,7 +36,7 @@
         padding: 14px 16px;
         text-decoration: none;
         color: $white;
-        &:hover {background-color: rbga(40,40,40,1);}
+        &:hover {background: $dark-green;}
 
         @include phone {
           width: 100%;
