--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -3,7 +3,7 @@ title: Home | Smart Private Practice
 ---
 
 .logo
-  = image_tag "spp_logo.png", class: "welcome"
+  = image_tag "spp_logo_small.png", class: "welcome"
 
 .list-container
   .list
