--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,235 +1,12 @@
 @charset "utf-8";
 @import "normalize";
 @import "variables";
+@import "main";
 @import "nav";
 @import "footer";
+@import "list";
+@import "book";
+@import "bio";
+@import "form";
 @import "blog";
 
-body {
-  background: $primary;
-  font-family: $base-font;
-  font-size: $base-font-size;
-  color: $base-font-color;
-}
-
-.button {
-  margin: 10px 0;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 18px;
-  background: $accent;
-  border-radius: 5px;
-  color: $white;
-  transition:0.5s;
-  box-shadow: 1px 0px 5px #333;
-  border: none;
-  outline: none;
-
-  &:hover { background: $accent-hover; }
-}
-
-.book {
-  width: 85%;
-  margin: 0 auto;
-  padding: 70px 0;
-  text-align: center;
-
-  h1, h3 {
-    font-weight: 300;
-    margin: 40px 0;
-  }
-
-}
-
-.container {
-  background-color: $white;
-  margin: 3em auto;
-
-  @include phone {
-    margin-top:0;
-    margin-bottom: 0;
-  }
-
-  @include desktop {
-    width: $container-desktop-width;
-    border-radius: 5px;
-  }
-
-  @include tablet {
-    width: $container-tablet-width;
-    border-radius: 5px;
-  }
-}
-
-.logo {
-  text-align: center;
-
-  img {
-    max-width: 700px;
-    width: 90%;
-    height: auto;
-    margin: 2em auto;
-  }
-}
-
-.list-container {
-  background: $secondary;
-}
-
-.list {
-  font-size: 1.3em;
-  width: 85%;
-  margin: 0 auto;
-  padding: 20px 0;
-
-  @include phone {
-    padding: 20px 0;
-  }
-
-  ul li {
-
-    .list-element {
-      margin: 40px;
-      color: $white;
-      font-weight: 300;
-
-      i { 
-        color: $primary; 
-        font-size: 24px;
-      }
-    }
-  }
-
-}
-
-.bio-container {
-  background: $secondary;
-  padding: 70px 10px;
-  .bio {
-    width: 85%;
-    margin: 0 auto;
-
-    @include phone {
-      width: 100%;
-    }
-
-    .about-card {
-      @include element($white);
-
-      p {
-        font-size: 1.17em;
-        line-height: 1.5em;
-      }
-
-      .about {
-        font-weight: 300;
-        line-height: 26px;
-        padding: 50px 30px;
-
-        h1 {
-          margin: 0;
-          color: $accent;
-        }
-      }
-    }
-  }
-
-  .pic {
-    text-align: center;
-    margin-top: 30px;
-    img {
-      @include pic;
-    }
-  }
-
-  @include desktop {
-    .about-card {
-      display: inline-block;
-      width: 550px;
-    }
-
-    .pic {
-      margin: 50px 30px;
-      float: right;
-      vertical-align: top;
-
-      img {
-        height: auto;
-        width: 200px;
-      }
-    }
-  }
-
-}
-
-.bold {
-  font-size: 20px;
-  font-weight: 600;
-  letter-spacing: 1px;
-  color: $blue;
-}
-
-.welcome {
-  -webkit-animation-name: welcome;
-  -webkit-animation-duration: .9s;
-}
-
-.newsletter-container {
-
-}
-
-#mc_embed_signup {
-  width: 85%;
-  margin: 70px auto;
-  text-align: center;
-
-  h2 {
-    margin: 50px;
-    color: $accent;
-  }
-}
-
-.mc-field-group {
-  margin-top: 40px;
-}
-
-input[type=email] {
-  width: 400px;
-  padding: 13px 20px;
-  border-radius: 4px;
-  border: 1px solid #777;
-  box-sizing: border-box;
-  outline: none;
-  transition: box-shadow .5s;
-  padding-left: 20px;
-  font-weight: 300;
-
-  @include phone {
-    width: 90%;
-  }
-
-  &:focus {
-    box-shadow: 0px 0px 5px #63CEFB;
-  }
-}
-
-@-webkit-keyframes welcome {
-  from {
-    -webkit-transform: scale(0);
-    opacity: 0;
-  }
-  60% {
-    -webkit-transform: scale(0);
-    opacity: 0;
-  }
-  82.5% {
-    -webkit-transform: scale(1.1);
-    -webkit-animation-timing-function: ease-out;
-    opacity: 1;
-  }
-  to {
-    -webkit-transform: scale(1);
-  }
-}
